// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Topbar JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript Methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="topbar"
    open={true}
  />
</Fragment>
`;

exports[`Components: Topbar Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    To use a topbar the bare minimum markup required is:
  </p>
  <ul>
    <li>
      <CodeTags
        code=".topbar"
        type="secondary"
      />
       wrapper.
    </li>
    <li>
      Anchor with class 
      <CodeTags
        code=".topbar-logo"
        type="secondary"
      />
       to display the logo and make it clickable.
    </li>
  </ul>
  <p>
    With this you get a topbar with the Swedbank Pay logo. In the topbar you can add additional functionality like a menu containing links. To enable this add a 
    <CodeTags
      code="<button>"
      type="primary"
    />
     and a 
    <CodeTags
      code="<nav>"
      type="primary"
    />
     containing anchors. Remember to include 
    <CodeTags
      code="toggle-nav=\\"{your_nav_id}\\""
      type="secondary"
    />
     as a 
    <CodeTags
      code="<button>"
      type="primary"
    />
     attribute to get the menu to appear when the menu-button is clicked.
  </p>
  <p>
    Note that scrolling is locked when the menu is displayed.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar"
      logout={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarPNG renders 1`] = `
<Fragment>
  <h2
    id="topbar-png"
  >
    Topbar with PNG logo
  </h2>
  <p>
    A PNG version of the logo can also be used. This is done by appending the class 
    <CodeTags
      code=".topbar-logo-png"
      type="secondary"
    />
     to the anchor with class 
    <CodeTags
      code=".topbar-logo"
      type="secondary"
    />
    . Only consider using the PNG version when there are issues with using the SVG version.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-png"
      logout={true}
      png={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    />
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-1-png"
      logout={true}
      png={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
      wide="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarSticky renders 1`] = `
<Fragment>
  <h2
    id="topbar-sticky"
  >
    Sticky topbar
  </h2>
  <p>
    A sticky topbar is also available, with class 
    <CodeTags
      code=".topbar-sticky"
      type="secondary"
    />
    . Use 
    <CodeTags
      code=".topbar-min-{breakpoint}-sticky"
      type="secondary"
    />
     to specify the minimum width the topbar should be sticky, or 
    <CodeTags
      code=".topbar-max-{breakpoint}-sticky"
      type="secondary"
    />
     to specify the maximum width the topbar should be sticky (see 
    <Link
      to="/utilities/breakpoints"
    >
      breakpoints
    </Link>
     for more information on breakpoints). Note that the sticky topbar does not work in Internet Explorer 11.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="container-fluid"
    >
      <Topbar
        id="demo-topbar-sticky"
        logout={true}
        sticky={true}
        topbarContent={
          Object {
            "btn": Object {
              "icon": "menu",
              "name": "Menu",
            },
            "items": Array [
              Object {
                "icon": "home",
                "name": "Home",
              },
              Object {
                "icon": "shopping_cart",
                "name": "Purchase history",
              },
              Object {
                "icon": "settings",
                "name": "Settings",
              },
            ],
          }
        }
        wide="xl"
      />
      <div
        className="row"
      >
        <div
          className="col-auto"
        >
          <Sidebar
            id="topbar-sticky-sidebar"
            sidebarNavList={
              Array [
                Object {
                  "icon": <i
                    className="material-icons-outlined"
                  >
                    home
                  </i>,
                  "title": "Home Page",
                },
                Object {
                  "children": Array [
                    Object {
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>,
                      "title": "Accessibility",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "title": "Primary colors",
                        },
                        Object {
                          "title": "Secondary colors",
                        },
                        Object {
                          "title": "Tertiary colors",
                        },
                      ],
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        palette
                      </i>,
                      "title": "Colors",
                    },
                    Object {
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        grid_on
                      </i>,
                      "title": "Grid",
                    },
                    Object {
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        space_bar
                      </i>,
                      "title": "Spacing",
                    },
                  ],
                  "icon": <i
                    className="material-icons-outlined rotated"
                  >
                    wb_incandescent
                  </i>,
                  "title": "Get Started",
                },
                Object {
                  "children": Array [
                    Object {
                      "title": "Introduction",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "title": "Event 1",
                        },
                        Object {
                          "title": "Event 2",
                        },
                        Object {
                          "title": "Event 3",
                        },
                      ],
                      "lastParent": true,
                      "title": "Events",
                    },
                    Object {
                      "title": "Conclusion",
                    },
                  ],
                  "icon": <i
                    className="material-icons-outlined"
                  >
                    palette
                  </i>,
                  "lastParent": false,
                  "title": "Identity",
                },
              ]
            }
            sticky={true}
          />
        </div>
        <main
          className="col main-content border-left"
        >
          Main content things...
        </main>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarWide renders 1`] = `
<Fragment>
  <h2
    id="topbar-wide"
  >
    Wide topbar
  </h2>
  <p>
    This is a wide topbar.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-1"
      logout={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
      wide="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarWithSidebar renders 1`] = `
<Fragment>
  <h2
    id="topbar-with-sidebar"
  >
    Topbar with sidebar content
  </h2>
  <p>
    It is recommended to have the sidebar content in the topbar menu on smaller devices, such as phones and tablets (see more on sidebar 
    <Link
      to="/components/sidebar"
    >
      here
    </Link>
    ).
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-sidebar"
      logout={true}
      sidebar={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    The topbar is used to give users an easily available navigational bar at the top of your web application.
  </p>
  <Overview />
  <TopbarWide />
  <TopbarSticky />
  <TopbarWithSidebar />
  <TopbarPNG />
  <JavascriptMethods />
</DocContainer>
`;
